--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,12 +10,12 @@
 
 <body ng-app="app" ng-controller="AppCtrl">
 	<div class="app" ui-view></div>
-
-	<script src="/static/node_modules/angular/angular/angular.js"></script>
-	<script src="/static/scripts/app.js"></script>
-	<script src="/static/scripts/app.router.js"></script>
-	<script src="/static/scripts/controllers/app.controller.js"></script>
-	<script src="/static/scripts/controllers/dashboard.controller.js"></script>
 </body>
+<script src="/node_modules/angular/angular/angular.js"></script>
+<script src="/scripts/app.js"></script>
+<link href="/css/app.css" rel="stylesheet" type="text/css">
+<script src="/scripts/app.router.js"></script>
+<script src="/scripts/controllers/app.controller.js"></script>
+<script src="/scripts/controllers/dashboard.controller.js"></script>
 
 </html>
